introduce blog-index context, fix css alignment with flex on h1 in header

--- a/src/css/vocabulary/vocabulary.css
+++ b/src/css/vocabulary/vocabulary.css
@@ -778,6 +778,8 @@ main > header:before {
 }
 
 main > header h1 {
+    width: 100%;
+    
     font-family: 'Roboto Condensed';
     font-size: 3.56em;
     font-style: normal;
